# Verlet-Integration

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs  old.rs  particle.rs  scene.rs  solver.rs  texture.rs
src/scene/: camera.rs  pipeline.rs
src/scene/pipeline/: buffer.rs  particle.rs  uniforms.rs  vertex.rs
src/scene/shaders/: particles.wgsl
textures/: particle-template.psd  textures.txt
