[package]
name = "TanX"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = ["debug", "canvas", "advanced", "tokio"] }
tokio = {version = "1", features = ["sync"] }
rand = "0.8.3"
tracing-subscriber = "0.3"
itertools = "0.12"
rustc-hash = "1.1.0"
glam = {version = "0.28.0", features = ["bytemuck"] }
bytemuck = "1.16.1"
image = "0.25.1"
anyhow = "1.0.86"

[build-dependencies]
anyhow = "1.0.86"
fs_extra = "1.3"
