[package]
name = "smog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12", features = ["wgpu", "canvas", "tokio", "debug"]}
iced_core = { version = "0.12.2" }
iced_futures = { version = "0.12" }
iced_graphics = { version = "0.12.1"}
iced_highlighter = { version = "0.12"}
iced_renderer = { version = "0.12.1"}
iced_runtime = { version = "0.12" }
iced_style = { version = "0.12"}
iced_tiny_skia = { version = "0.12" }
iced_wgpu = { version = "0.12"}
iced_widget = { version = "0.12" }
iced_winit = { version = "0.12"}

tokio = {version = "1", features = ["sync"] }
rand = "0.8.3"
tracing-subscriber = "0.3"
rustc-hash = "1.1.0"
glam = {version = "0.28.0", features = ["bytemuck"] }
bytemuck = "1.16.1"
image = "0.25.1"
anyhow = "1.0.86"
log = "0.4.22"
futures = "0.3.30"
rayon = "1.10.0"

[build-dependencies]
anyhow = "1.0.86"
fs_extra = "1.3"
